--- a/tools/templates/package.j2/README.md.j2
+++ b/tools/templates/package.j2/README.md.j2
@@ -1,7 +1,7 @@
-# {{ title }}
+# SIP {{ title }} Package {{ acronym }}
 
 ## Description
-\[FIXME: Add description!\]
+{{ description }}
 
 ## Provided Interfaces
 
