--- a/tools/templates/package.j2/tests/README.md.j2
+++ b/tools/templates/package.j2/tests/README.md.j2
@@ -1,4 +1,4 @@
-# Tests for {{ title }}
+# Tests for SIP {{ title }} Package
 
 ## Description
-\[FIXME: Add brief description of what test exist!\]
+\[FIXME: Add brief description about the tests!\]
