updated folder creation template

--- a/tools/templates/package.j2/README.md.j2
+++ b/tools/templates/package.j2/README.md.j2
@@ -1,4 +1,4 @@
-# SIP {{ title }} Package {{ acronym }}
+# SIP {{ title }} {{ abbr }}
 
 ## Description
 {{ desc }}
@@ -6,3 +6,4 @@
 ## Provided Interfaces
 
 ## Required Interfaces
+
