--- a/tools/templates/package.j2/tests/README.md.j2
+++ b/tools/templates/package.j2/tests/README.md.j2
@@ -1,4 +1,5 @@
-# Tests for SIP {{ title }} Package
+# Tests for SIP {{ title }}
 
 ## Description
 \[FIXME: Add brief description about the tests!\]
+
